--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    background: hsl(14, 32%, 85%);
+    background: hsl(26deg 40% 92%);
     height: 100vh;
     display: grid;
     justify-content: center;
@@ -26,14 +26,14 @@ body {
 }
 
 .container-imagen img {
-    width: 270px;
+    width: 100%;
     height: 400px;
     border-radius: 10px 0 0 10px;
     object-fit: cover;
 }
 
 .container-info {
-    background: hsl(30, 38%, 92%);
+    background: hsl(0, 0%, 100%);
     border-radius: 0 10px 10px 0;
     padding: 1.4rem;
     display: flex;
@@ -126,7 +126,7 @@ body {
 
     .container-tarjeta {
         grid-template-columns: repeat(auto-fit, 300px);
-        grid-template-rows: 250px;
+        grid-template-rows: 220px 350px ;
     }
 
     .container-info {
@@ -134,8 +134,7 @@ body {
     }
 
     .container-imagen img {
-        width: 300px;
-        height: 250px;
+        height: 220px;
         border-radius: 10px 10px 0 0;
     }
 
